css changes, improvements to setup, starting to get into buttplug.io

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 __pycache__/*
 __pycache__/pirelaycontrol.cpython-37.pyc
+
+
+#Added by cargo
+#
+#already existing elements are commented out
+
+/target
+**/*.rs.bk
+env/
+node_modules/
+package.json
