--- a/rust/devices.yaml
+++ b/rust/devices.yaml
@@ -1,27 +1,23 @@
 version: 0.0.1
-tens:
-  - tens: #channels
-    - 1:
-      pins:
+devices:
+- name: "Zappy"
+  functions:
+  - type: tens
+    pins:
+    - pair:
         positive: 1
         negative: 2
-    - 2:
-      pins:
+    - pair:
         positive: 3
         negative: 4
-  - other:
-    - 1:
-      pins:
-hush:
-  - vibrate:
-    - 1:
-      min: 0
-      max: 10
-      pin: 30
-temp:
-  #this is an input
-  input:
-    type: tempriture
-    pin: 5
-
-  
+    - pin: 4
+  - type: vibrator
+    pins:
+    - pin: 4
+- name: "Hush"
+  functions:
+  - type: vibrator
+    min: 0
+    max: 10
+    pins:
+    - pin: 30
