--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,14 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# buttplug = "0.0.2"
-# blurz = "0.4.0"
-bluster = "0.1.2"
 gpio = "0.4.1"
 serde_yaml = "0.8.11"
 serde = { version = "1.0", features = ["derive"] }
+ws = "0.9.1"
 
-#futures = "0.1.25"
-#tokio = "0.1.13"
-#uuid = "0.7.1"
 
+# buttplug = "0.0.2"
+# blurz = "0.4.0"
+# bluster = "0.1.2"
