--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,8 +11,8 @@ gpio = "0.4.1"
 serde_yaml = "0.8.11"
 serde = { version = "1.0", features = ["derive"] }
 ws = "0.9.1"
+serde_json = "1.0"
 
-
-# buttplug = "0.0.2"
+buttplug = "0.0.2"
 # blurz = "0.4.0"
 # bluster = "0.1.2"
