--- a/copytoroot/wpa_supplicant.conf
+++ b/copytoroot/wpa_supplicant.conf
@@ -2,6 +2,6 @@ ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
 country=US
 network={
- ssid="escher.icc.coop"
- psk="guffinternet"
+ ssid="GoldExperience"
+ psk="a-rnuy_K5Y4fQ4TP"
 }
